refactor: use modern tooling for project